# llama.cpp

./: .gitignore  CMakeLists.txt  Makefile  __Results.txt  __ccx-spread-summary__.md  __readme_MTP__.txt  __readme__.txt  __readme__.txt_032825  __readme_ryzenai__.md  __readme_wsl2__.txt  configure-xbox.ps1  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py
examples/: CMakeLists.txt
examples/batched-bench/: batched-bench.cpp
examples/chatbot/: CMakeLists.txt  chatbot.h  command.cpp  hist.cpp  main.cpp
examples/clip/: CMakeLists.txt  clip.cpp  clip.h  clipIndex.cpp  clipQuantize.cpp  clipSrch.cpp  common-clip.cpp  run_Index.cmd  run_Srch.cmd
examples/clip/convert/: convert_model.txt
examples/clip/hnswlib/: space_ip.h
examples/gemma4/: CMakeLists.txt  Gemma4.cpp  __bpe_chat_pitfall__.md  __readme_gemma4__.md  _g4_inspect.py  gemma4_baseline.cpp  gemma4_baseline.h  gemma4_bench.cpp  gemma4_bench.h  gemma4_chat.cpp  gemma4_chat.h  gemma4_forward.cpp  gemma4_forward.h  gemma4_kernels.cpp  gemma4_kernels.h  gemma4_kvcache.cpp  gemma4_kvcache.h  gemma4_loader.cpp  gemma4_loader.h  gemma4_matmul.cpp  gemma4_matmul.h  gemma4_weights.cpp  gemma4_weights.h
examples/gguf-cli/: CMakeLists.txt  GGUF-cli.cpp  __readme_Phi3__.md  __readme__.md
examples/llama-bench/: llama-bench.cpp
examples/llm-infer/: CMakeLists.txt
examples/llm-infer/dll/: llm-infer.cpp  llm-infer.h
examples/llm-infer/minslm/: KV_Cache_Flow.txt  KV_Cache_MultiTurn.pptx  __MR__.txt  __readme__.txt  custom_prompts_multiturn.txt  games-meta.txt  minslm-multi-og.cpp  minslm-multi.cpp  minslm.cpp  minslm_cli.cpp
examples/llm-infer/prompts/: custom_prompts.txt  custom_prompts_gemma4.txt  custom_prompts_gemma4_v1.txt  custom_prompts_qwen3.txt  mara_multiturn.txt  single_prompt.txt  single_prompt_gemma4.txt  single_prompt_gemma4_v1.txt
examples/llm-infer/python/: __readme__.txt  chat.py  chunks.json  createDB.ps1  metadata.json  rag_service.py  testDB.py
examples/llm-infer/ragbuild/: dtt.h  ragbuild.cpp  zip_file.cpp
examples/llm-infer/ragbuild/RAGbuilder/: Debug.cpp  Debug.h  RAGHelper.cpp  RAGHelper.h  RAGbuilder.cpp  RAGbuilder.h  StringUtils.h  aimx.cpp  llm.cpp  pch.h
examples/llm-infer/server/: server.cpp
examples/llm-infer/teacher/: Gemma-4_E2B_Q3_K_M_results.json  __readme__.txt  config.json  mara_system_prompt_Teacher_v1.txt  teacher.cpp
examples/llm-infer/test/: testme.cpp  vk_sparse_test.cpp
examples/phi3/: CMakeLists.txt  Phi3.cpp  __phase_A2_spec.md  __readme_phi3__.md  phi3_bench.cpp  phi3_bench.h  phi3_fused_graph.cpp  phi3_fused_graph.h  phi3_fused_ops.cpp  phi3_fused_ops.h  phi3_kernels.cpp  phi3_kernels.h  phi3_loader.cpp  phi3_loader.h  phi3_runtime.cpp  phi3_runtime.h  phi3_transform.cpp  phi3_transform.h
examples/phi4mm/: CMakeLists.txt  phi4mm-cli.cpp
examples/retrieval/: 1liners.txt  CMakeLists.txt  __readme__.txt  b612-cpu.h  retrieval.cpp  retrieval.org
examples/simple/: CMakeLists.txt  matrix.cpp
examples/wxemem/: CMakeLists.txt  bwtest.c  ccxrun.c  topo.c  wxemem.cpp
examples/xbapp/: CMakeLists.txt  custom_prompts.txt  custom_prompts_gpt.txt  custom_prompts_qwen3.txt  short.txt  slminfer.cpp  xbapp.cpp  xbapp.h
ggml/src/ggml-dx12/: CMakeLists.txt  __readme__.txt  ggml-dx12-platform.h  ggml-dx12.cpp
ggml/src/ggml-dx12-main/: CMakeLists.txt  GOTCHAS.md  ggml-dx12.cpp
ggml/src/ggml-dx12-main/shaders/: add.hlsl  add_rms_norm_mul.hlsl  cast.hlsl  clamp.hlsl  conv_2d.hlsl  cos.hlsl  cpy.hlsl  dequant_q4_k.hlsl  div.hlsl  exp.hlsl  flash_attn.hlsl  flash_attn_128.hlsl  flash_attn_gqa.hlsl  flash_attn_reduce.hlsl  gated_delta_net.hlsl  gelu.hlsl  gelu_erf.hlsl  get_rows.hlsl  get_rows_iq4_nl.hlsl  get_rows_q2k.hlsl  get_rows_q3k.hlsl  get_rows_q4_0.hlsl  get_rows_q4_1.hlsl  get_rows_q4k.hlsl  get_rows_q5_0.hlsl  get_rows_q5_1.hlsl  get_rows_q5k.hlsl  get_rows_q6k.hlsl  get_rows_q8_0.hlsl  get_rows_q8_1.hlsl  ggml_common.hlsli  glu.hlsl  group_norm.hlsl  im2col.hlsl  l2_norm.hlsl  log.hlsl  mul.hlsl  mul_mat.hlsl  mul_mat_id.hlsl  mul_mat_id_iq4_nl.hlsl  (+77 more)
ggml/src/ggml-dx12/shaders/: add.hlsl  add_rms_norm_mul.hlsl  concat.hlsl  cpy.hlsl  diag_mask_inf.hlsl  flash_attn.hlsl  flash_attn_64.hlsl  flash_attn_uma.hlsl  get_rows_q4_0.hlsl  get_rows_q5_0.hlsl  get_rows_q5_1.hlsl  get_rows_q5k.hlsl  get_rows_q6k.hlsl  get_rows_q8_1.hlsl  ggml_common.hlsli  glu.hlsl  mul_mat_cv.hlsl  mul_mat_q2k.hlsl  mul_mat_q3k.hlsl  mul_mat_q4_0.hlsl  mul_mat_q4k.hlsl  mul_mat_q4k_wmma.hlsl  mul_mat_q5_0.hlsl  mul_mat_q5_0_wmma.hlsl  mul_mat_q5_1.hlsl  mul_mat_q5k_wmma.hlsl  mul_mat_q6k.hlsl  mul_mat_q6k_wmma.hlsl  mul_mat_q8_0.hlsl  mul_mat_q8_1.hlsl  mul_mat_vec.hlsl  mul_mat_vec_load4.hlsl  mul_mat_vec_q2k.hlsl  mul_mat_vec_q3k.hlsl  mul_mat_vec_q4k.hlsl  mul_mat_vec_q4k_32.hlsl  mul_mat_vec_q5k.hlsl  (+17 more)
ggml/src/ggml-ryzenai/: CMakeLists.txt  __summary__.md  ggml-ryzenai-impl.cpp  ggml-ryzenai-impl.h  ggml-ryzenai.cpp
so2001/: CMakeLists.txt  CMakePresets.json  README.md  __readme__.txt  config.inc
so2001/batchslm/: CMakeLists.txt  batchslm.cpp
so2001/classify/: CMakeLists.txt  classify.c
so2001/clip/: CMakeLists.txt  clip.cpp  clip.h  clipIndex.cpp  clipSrch.cpp  common-clip.h  run_Index.txt  run_Srch.txt
so2001/clip/hnswlib/: hnswalg.h
so2001/common/: CMakeLists.txt  common.cpp  common.h  grammar-parser.cpp  json-schema-to-grammar.cpp  llama.cpp  llama.h  log.h  sampling.cpp  unicode-data.cpp  unicode.cpp  za-common.def
so2001/llbench/: CMakeLists.txt  llbench.cpp
so2001/llbench-b/: CMakeLists.txt  llbench-b.cpp
so2001/llindex/: CMakeLists.txt  llindex.cpp
so2001/llspec/: CMakeLists.txt  llspec.cpp
so2001/lltest/: CMakeLists.txt  lltest.c
so2001/minslm-za/: CMakeLists.txt  custom_prompts.txt  minslm.cpp  minslm.h  slminfer.cpp
so2001/perfavx/: CMakeLists.txt  perfavx.c
so2001/za-ggml/: CMakeLists.txt  dllmain.cpp  ggml-common.h  ggml-impl.h  ggml-q4.c  ggml-q4.h  ggml-quants.c  ggml-quants.h  ggml-repack.c  ggml-repack.h  ggml.c  ggml.h  za-ggmlapi.def
so2001/zo-ggml/: CMakeLists.txt  ggml-common.h  ggml-q4.c  ggml-quants.c  ggml.c  ggml.h  zo-ggmlapi.def
(+148 files in other folders)
