project(slm-infer)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
    add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
endif()

if(GGML_CUDA)
    add_compile_definitions(GGML_USE_CUDA)
endif()

if(GGML_VULKAN)
    add_compile_definitions(GGML_USE_VULKAN)
endif()

if(GGML_DX12 OR GGML_DX12_MAIN)
    add_compile_definitions(GGML_USE_DX12)
endif()


set(TARGET slm-infer)

add_library(
    slm-infer OBJECT
    dll/llm-infer.cpp
    dll/llm-infer.h
    )

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(llm-infer-static STATIC $<TARGET_OBJECTS:slm-infer>)
add_library(llm-infer SHARED $<TARGET_OBJECTS:slm-infer>)
set_target_properties(${TARGET} PROPERTIES POSITION_INDEPENDENT_CODE ON)
target_include_directories(${TARGET} PUBLIC ../..)
target_include_directories(${TARGET} PUBLIC ../../common)
target_include_directories(${TARGET} PUBLIC ../../include)
target_include_directories(${TARGET} PUBLIC ../../ggml/include)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_compile_definitions(${TARGET} PRIVATE LLM_INFER_SHARED LLM_INFER_DLL)
target_link_libraries(llm-infer PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS llm-infer LIBRARY)
target_compile_features(${TARGET} PRIVATE cxx_std_17)

set(TARGET buildrag-dll)
add_executable(${TARGET} ragbuild/ragbuild.cpp ragbuild/zip_file.cpp ragbuild/zip_file.h ragbuild/dtt.h)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

if (CMAKE_C_COMPILER_ID STREQUAL "Clang")
# Disable ragBuilder-dll with Clang - embed_initialize() dup symbol
else()
set(TARGET ragBuilder-dll)
add_executable(${TARGET} ragbuild/RAGbuilder/llm.cpp ragbuild/RAGbuilder/RAGbuilder.cpp ragbuild/RAGbuilder/RAGHelper.cpp ragbuild/RAGbuilder/Debug.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
endif()

set(TARGET server-dll)
add_executable(${TARGET} server/server.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

set(TARGET minslminfer-dll)
add_executable(${TARGET} minslm/minslm.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

set(TARGET minslminfer)
add_executable(${TARGET} minslm/minslm.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer-static ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

set(TARGET minslminfer-multi)
add_executable(${TARGET} minslm/minslm-multi.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer-static ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)

set(TARGET minslminfer-multi-og)
add_executable(${TARGET} minslm/minslm-multi-og.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_include_directories(${TARGET} PUBLIC ../../include)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer-static ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)

# Cross-platform benchmark (no Windows/DLL dependencies - builds on Linux/WSL2/macOS/Windows)
set(TARGET minslm-cli)
add_executable(${TARGET} minslm/minslm_cli.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PUBLIC ../../include)
target_link_libraries(${TARGET} PRIVATE llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)

set(TARGET teacher)
add_executable(${TARGET} teacher/teacher.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/dll)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/hnswlib)
target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/examples/llm-infer/include/nlohmann)
target_include_directories(${TARGET} PUBLIC ../../common)
target_include_directories(${TARGET} PUBLIC ../../include)
target_link_libraries(${TARGET} PRIVATE common llama llm-infer-static ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)

set(TARGET testme)
add_executable(${TARGET} test/testme.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(${TARGET} PRIVATE .)
target_include_directories(${TARGET} PUBLIC ../../common)
#target_link_libraries(${TARGET} PRIVATE common llama llm-infer-static ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)

# Vulkan sparse resource probe — tests feasibility of layer windowing on Vulkan
if(GGML_VULKAN)
    find_package(Vulkan REQUIRED)
    set(TARGET vk-sparse-test)
    add_executable(${TARGET} test/vk_sparse_test.cpp)
    install(TARGETS ${TARGET} RUNTIME)
    target_include_directories(${TARGET} PRIVATE ${Vulkan_INCLUDE_DIRS})
    target_link_libraries(${TARGET} PRIVATE ${Vulkan_LIBRARIES})
    target_compile_features(${TARGET} PRIVATE cxx_std_17)
endif()

# end of CMakeLists.txt ...

