set(TARGET xbapp)
add_executable(${TARGET} xbapp.cpp slminfer.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_include_directories(xbapp PUBLIC .)
target_include_directories(xbapp PUBLIC ../../include)
target_include_directories(xbapp PUBLIC ../../common)
target_link_libraries(${TARGET} PRIVATE llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_11)
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
